# ChangeLog for sci-geosciences/josm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.43 2012/07/27 22:28:32 hanno Exp $

*josm-5356 (27 Jul 2012)

  27 Jul 2012; Hanno Boeck <hanno@gentoo.org> +josm-5356.ebuild:
  Version bump.

*josm-5315 (19 Jul 2012)

  19 Jul 2012; Hanno Boeck <hanno@gentoo.org> +josm-5315.ebuild:
  Version bump.

*josm-4550 (24 Nov 2011)

  24 Nov 2011; Hanno Boeck <hanno@gentoo.org> +josm-4550.ebuild:
  Bump and use optimized jar.

*josm-4203 (31 Jul 2011)

  31 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org> -josm-4201.ebuild,
  +josm-4203.ebuild:
  Version bump to latest. Drop older.

*josm-4201 (06 Jul 2011)

  06 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org> -josm-4064.ebuild,
  +josm-4201.ebuild:
  Version bump to the latest. Drop older.

*josm-9999 (17 Jun 2011)

  17 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> +josm-9999.ebuild:
  Add live ebuild. Per bug #371913.

*josm-4064 (08 Jun 2011)

  08 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> -josm-3695.ebuild,
  -josm-3701.ebuild, -josm-3966.ebuild, +josm-4064.ebuild, -files/josm-r1,
  -files/josm.png:
  Version bump to latest. Drop older.

*josm-3966 (31 Mar 2011)

  31 Mar 2011; Hanno Boeck <hanno@gentoo.org> +josm-3966.ebuild:
  Version bump, with slight modifications from Florian Schmaus in #348795, also
  fixes #347902.

*josm-3701 (25 Dec 2010)

  25 Dec 2010; Hanno Boeck <hanno@gentoo.org> +josm-3701.ebuild:
  Version bump.

*josm-3695 (06 Dec 2010)

  06 Dec 2010; Hanno Boeck <hanno@gentoo.org> +josm-3695.ebuild:
  Version bump.

*josm-3592 (21 Oct 2010)

  21 Oct 2010; Hanno Boeck <hanno@gentoo.org> +josm-3592.ebuild:
  Don't use obsolete version scheme, bump.

*josm-3.208 (31 May 2010)

  31 May 2010; Hanno Boeck <hanno@gentoo.org> +josm-3.208.ebuild:
  Version bump.

*josm-2.561 (21 Dec 2009)

  21 Dec 2009; Hanno Boeck <hanno@gentoo.org> +josm-2.561.ebuild:
  Version bump.
